--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
     "react-transition-group": "^2.5.2",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,6 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.2.3",
     "redux-devtools": "^3.5.0"
   }
 }
